2008-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* calendar/parse-time.el (parse-time-months)
	(parse-time-weekdays): Add long-form month and day names.

2008-05-27  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (update-elclist): Make errors in final sed non-fatal.

2008-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-dispatcher.el (vc-string-prefix-p): New function.
	(vc-dir-parent-marked-p): Use it.

2008-05-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (Problems): Remove fixed issues.
	(vc-expand-dirs): Avoid returning directories.
	(vc-dir): Fix C-x v v binding.
	(vc-make-backend-object): Fix name.
	(vc-dir-show-fileentry): Fix docstring.
	(vc-dir-refresh): Use vc-dir-backend.  Fix docstring.
	(vc-dir-refresh-files): Use vc-dir-backend.  Fix docstring.
	Reset the state for directories.
	(vc-dir-headers): Align labels.
	(vc-default-status-printer): Do no call prettify-state-info.
	(vc-deduce-fileset): Replace implementation with one based on a
	working older version.
	(vc-next-action): Use the new form of vc-deduce-fileset.
	Fix dealing with unregistered files.

	* vc-dispatcher.el (vc-resynch-window): Fix mode-line updating.
	(vc-dir-menu-map): Fix menu title for the menu bar and the popup menu.
	(vc-dir-child-files): New function.
	(vc-dir-node-directory): New function.
	(vc-dir-update, vc-dir-parent-marked-p)
	(vc-dir-children-marked-p, vc-dir-mark-all-files)
	(vc-dir-marked-only-files, vc-dispatcher-selection-set): Use it.

	* vc-cvs.el (vc-cvs-status-extra-headers): Align labels.

2008-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-context-mid-hunk-header-re): New const.
	(diff-font-lock-keywords, diff-context->unified)
	(diff-reverse-direction, diff-fixup-modifs, diff-sanity-check-hunk)
	(diff-hunk-text, diff-find-source-location): Use it.
	(diff-post-command-hook): Let the user edit the hunk headers.

2008-05-26  Andreas Schwab  <schwab@suse.de>

	* vc.el (vc-default-prettify-state-info): Fix formatting of an